--- a/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
@@ -146,7 +146,7 @@ ViewDetailsScreen As screen:
             AlignInContainer: =AlignInContainer.Center
             Fill: =RGBA(255, 255, 255, 1)
             FillPortions: =0
-            Height: =SummaryForm_3.Height+glryImageLSS_2.Height
+            Height: =SummaryForm_3.Height+glryImageLSS_2.Height+Label4.Height
             LayoutDirection: =LayoutDirection.Vertical
             LayoutMinHeight: =100
             LayoutMinWidth: =250
@@ -163,7 +163,7 @@ ViewDetailsScreen As screen:
                 DefaultMode: =FormMode.View
                 Fill: =RGBA(255, 255, 255, 1)
                 FillPortions: =0
-                Height: ='Contract Number_DataCard1_3'.Height+'Building Name_DataCard2_3'.Height+PinCode_DataCard2_3.Height+Address_DataCard2_3.Height+UnitCount_DataCard3_3.Height+UnitDescription_DataCard3_3.Height+PrimaryScopeofWorkLID_DataCard1.Height+SecondaryScopeofWorkLID_DataCard1.Height+ManuallyScopeOfWork_DataCard3_3.Height+EstimatedHours_DataCard1_4.Height+Material_DataCard1_4.Height+'Unit Down_DataCard2_4'.Height+'Additional expenses required_DataCard2_3'.Height+'Travel Required_DataCard2_3'.Height+'Communicated to Customer_DataCard2_3'.Height+30
+                Height: ='Contract Number_DataCard1_3'.Height+'Building Name_DataCard2_3'.Height+PinCode_DataCard2_3.Height+Address_DataCard2_3.Height+UnitCount_DataCard3_3.Height+UnitDescription_DataCard3_3.Height+PrimaryScopeofWorkLID_DataCard1.Height+SecondaryScopeofWorkLID_DataCard1.Height+ManuallyScopeOfWork_DataCard3_3.Height+EstimatedHours_DataCard1_4.Height+Material_DataCard1_4.Height+'Unit Down_DataCard2_4'.Height+'Additional expenses required_DataCard2_3'.Height+'Travel Required_DataCard2_3'.Height+'Communicated to Customer_DataCard2_3'.Height+40
                 Item: =VarFormMode
                 LayoutMinHeight: =250
                 LayoutMinWidth: =400
@@ -721,7 +721,7 @@ ViewDetailsScreen As screen:
                         DisplayMode: =Parent.DisplayMode
                         Font: =Font.Arial
                         Items: =Choices([@LeadInformations].PrimaryScopeofWorkLID)
-                        PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
+                        PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 5)
                         SearchFields: =["shlrf_primaryscopeofworkname"]
                         SearchItems: =Search(Choices([@LeadInformations].PrimaryScopeofWorkLID),DataCardValue1.SearchText,"shlrf_primaryscopeofworkname")
                         SelectMultiple: =false
@@ -796,7 +796,7 @@ ViewDetailsScreen As screen:
                         DisplayMode: =Parent.DisplayMode
                         Font: =Font.Arial
                         Items: =SecondaryScopeofWorks
-                        PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
+                        PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 5)
                         SearchFields: =["shlrf_secondaryscopeofworkname"]
                         SearchItems: =Search(SecondaryScopeofWorks,DataCardValue2.SearchText,"shlrf_secondaryscopeofworkname")
                         SelectionFill: =RGBA(0, 0, 0, 1)
@@ -1341,6 +1341,13 @@ ViewDetailsScreen As screen:
                         X: =30
                         ZIndex: =5
 
+            Label4 As label:
+                FontWeight: =FontWeight.Semibold
+                Size: =14
+                Text: ="Uploaded Images"
+                Width: =Parent.Width
+                ZIndex: =2
+
             "glryImageLSS_2 As gallery.'BrowseLayout_Vertical_OneImageTwoColumnVariant_ver5.0'":
                 BorderColor: =RGBA(39, 113, 194, 1)
                 DelayItemLoading: =true
@@ -1360,7 +1367,7 @@ ViewDetailsScreen As screen:
                 WrapCount: =4
                 X: =40
                 Y: =SummaryForm_3.Height
-                ZIndex: =2
+                ZIndex: =3
 
                 ImageLSS_2 As image:
                     BorderThickness: =2
