--- a/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
@@ -207,29 +207,30 @@ LeadListScreen As screen:
                             =Sort(
                                 If(
                                     VarMyLeads = true,
-                                    Filter(
+                                    Search(Filter(
                                         LeadInformations,
                                         QQTeamName = User().FullName ,Territory=cmbxregionfilterLS.Selected.Territory ||IsBlank(cmbxregionfilterLS.Selected.Territory) ,District=cmbxdistrictfilterLS.Selected.District ||IsBlank(cmbxdistrictfilterLS.Selected.District) ,Area=cmbxareafilterLS.Selected.Area ||IsBlank(cmbxareafilterLS.Selected.Area)
-                                    ),
+                                    ),txtinptsearchLS.Text,"shlrf_contractnumber","shlrf_mechanicname"),
                                     If(
                                         VarOpenLeads = true,
-                                        Filter(
+                                        Search(Filter(
                                             LeadInformations,
                                             (LeadStatus = "Submitted"|| LeadStatus = "Rejected" ||LeadStatus = "InProgress")
                                             , Territory=cmbxregionfilterLS.Selected.Territory ||IsBlank(cmbxregionfilterLS.Selected.Territory) ,District=cmbxdistrictfilterLS.Selected.District ||IsBlank(cmbxdistrictfilterLS.Selected.District) ,Area=cmbxareafilterLS.Selected.Area ||IsBlank(cmbxareafilterLS.Selected.Area)
-                                        ),
+                                        ),txtinptsearchLS.Text,"shlrf_contractnumber","shlrf_mechanicname")
+                                        ,
                                         If(
                                             VarQuotedLeads = true,
-                                            Filter(
+                                           Search( Filter(
                                                 LeadInformations,
                                                 LeadStatus = "Quoted",Territory=cmbxregionfilterLS.Selected.Territory ||IsBlank(cmbxregionfilterLS.Selected.Territory) ,District=cmbxdistrictfilterLS.Selected.District ||IsBlank(cmbxdistrictfilterLS.Selected.District) ,Area=cmbxareafilterLS.Selected.Area ||IsBlank(cmbxareafilterLS.Selected.Area)
-                                            ),
+                                            ),txtinptsearchLS.Text,"shlrf_contractnumber","shlrf_mechanicname"),
                                             If(
                                                 VarSoldLeads = true,
-                                                Filter(
+                                               Search( Filter(
                                                     LeadInformations,
                                                     LeadStatus = "Sold",Territory=cmbxregionfilterLS.Selected.Territory ||IsBlank(cmbxregionfilterLS.Selected.Territory) ,District=cmbxdistrictfilterLS.Selected.District ||IsBlank(cmbxdistrictfilterLS.Selected.District) ,Area=cmbxareafilterLS.Selected.Area ||IsBlank(cmbxareafilterLS.Selected.Area)
-                                                )
+                                                ),txtinptsearchLS.Text,"shlrf_contractnumber","shlrf_mechanicname")
                                             )
                                         )
                                     )
