--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -192,7 +192,7 @@ DashboardScreen As screen:
                         =If(toggleDS_1.TrueText=toggleDS_1.FalseText,DisplayMode.Disabled,DisplayMode.Edit)
                     FalseFill: =Color.Black
                     FalseText: |
-                        =LookUp(LeadInformations,MechanicName=User().FullName,Year('Created On'))
+                        =LookUp(LeadInformations,MechanicName=User().FullName,Year('Created On')) &"-"& Year(Now())
                     Font: =Font.Arial
                     Height: =Parent.Height/2.02
                     OnCheck: |-
