--- a/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
@@ -670,7 +670,7 @@ SubmittedLeadScreen As screen:
                     DisabledBorderColor: =RGBA(255, 0, 0, 1)
                     Font: =Font.Arial
                     Height: =50
-                    HintText: ="Search Leads by Contract number or building name or address or zipcode "
+                    HintText: ="Search leads by contract number or building name or address or zipcode "
                     HoverBorderColor: =RGBA(255, 0, 0, 1)
                     HoverFill: =RGBA(0, 0, 0, 0)
                     LayoutMinHeight: =70
